[tool.poetry]
name = "isle"
version = "0.4.0"
description = "A clear and distinct wrapper of The Movie Database API."
authors = ["Dima Koskin <dmksknn@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/dmkskn/isle/"
homepage = "https://github.com/dmkskn/isle/"

keywords = [
    "themoviedb",
    "the movie database",
    "movie",
    "tv",
    "tmdb",
    "imdb",
    "tvdb",
    "wrapper",
    "api",
]

classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
]


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = { version = "^18.3-alpha.0", allows-prereleases = true }
pre-commit = "^1.12"


[tool.black]
line-length = 79
